--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,27 @@
 
-# Playwright
+# # Playwright
+# node_modules/
+# /test-results/
+# /playwright-report/
+# /blob-report/
+# /playwright/.cache/
+# /playwright/.auth/
+# Node
 node_modules/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
-/playwright/.auth/
+npm-debug.log*
+yarn-error.log*
+package-lock.json
+pnpm-lock.yaml
+
+# Playwright reports & results
+playwright-report/
+test-results/
+blob-report/
+
+# IDE/editor
+.vscode/
+.idea/
+.DS_Store
+
+# Local env
+.env
